--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 22
@@ -26,6 +41,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files ('libs/universal-image-loader-1.9.3.jar')
+    compile files('libs/jackson-all-1.9.11.jar')
+    compile files('libs/commons-lang3-3.4.jar')
+    compile project(':WeatherIconView-library')
     compile 'com.android.support:recyclerview-v7:21.0.2'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -33,4 +51,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'org.adw.library:discrete-seekbar:1.0.0'
     compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.3.2@aar') {
+        transitive = true;
+    }
+
 }
